# autorip

./: .gitignore  AUDIT_V2.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  Dockerfile.ci  INSTALL.md  Makefile  README.md  RELEASE.md  build.rs  docker-compose.example.yml  entrypoint.sh  udev-trigger.sh
.github/profile/: README.md
.github/workflows/: ci.yml  release.yml
src/: config.rs  history.rs  keyserver.rs  keysource.rs  lib.rs  log.rs  main.rs  mover.rs  muxer.rs  observe.rs  pipe.rs  review.rs  ripper.rs  tmdb.rs  util.rs  verify.rs  web.rs  webhook.rs
src/ripper/: mod.rs  mux.rs  resume.rs  session.rs  staging.rs  state.rs  sweep.rs
tests/: end_to_end.rs  halt_drain.rs  reporting.rs  resume_remux.rs  spawn_registration.rs  watchdog.rs
tests/fixtures/: settings.json
