[package]
name = "freemkv-autorip"
version = "0.27.4"
edition = "2024"
rust-version = "1.86"
license = "AGPL-3.0-only"
description = "Automatic disc ripper — insert a disc, get an MKV"
repository = "https://github.com/freemkv/autorip"
keywords = ["bluray", "uhd", "ripper", "automation", "disc"]
categories = ["hardware-support", "multimedia"]

[[bin]]
name = "autorip"
path = "src/main.rs"

[dependencies]
libfreemkv = "0.27"
freemkv-keysources = "0.27"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22"
ureq = { version = "2", features = ["json"] }
tiny_http = "0.12"
once_cell = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-appender = "0.2"
# Same kernel-wakeup channel primitive libfreemkv uses for Pipeline.
# Replaces the producer's `std::sync::mpsc::sync_channel` + 50 ms
# poll-loop in `ripper/mux.rs` so the producer thread blocks on
# consumer drain instead of pacing at 20 frames/sec.
crossbeam-channel = "0.5"
# Global allocator. mimalloc cuts the ~22% kernel allocator complex
# (clear_page, mmap/munmap, mm_fault, memcg) that glibc's
# mmap-on-large-alloc path generates from per-frame PesFrame
# allocations during mux. `secure` enables guard pages + canaries —
# we run privileged (per autorip's docker compose) and parse
# untrusted disc payloads, so the few-percent allocator cost is worth
# the hardening.
mimalloc = { version = "0.1", features = ["secure"] }

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[dev-dependencies]
tempfile = "3"

# ─── DEV-ONLY LOCAL PATCH — DO NOT COMMIT/PUSH ───────────────────────────────
# autorip's CI builds dependencies from crates.io. libfreemkv 0.27.5 and
# freemkv-keysources are not published yet, so this points them at the local
# working copies for development + testing of the 0.27.5 keydb-decoupling.
# Before release: publish in order (libfreemkv → freemkv-keysources → … →
# autorip) and DELETE this section. Pushing it would break CI.
[patch.crates-io]
libfreemkv = { path = "../libfreemkv" }
freemkv-keysources = { path = "../freemkv-keysources" }
