[package]
name = "freemkv-autorip"
version = "1.0.0-rc.4.1"
edition = "2024"
rust-version = "1.86"
license = "AGPL-3.0-only"
description = "Automatic disc ripper — insert a disc, get an MKV"
repository = "https://github.com/freemkv/autorip"
exclude = ["CLAUDE.md"]
keywords = ["bluray", "uhd", "ripper", "automation", "disc"]
categories = ["hardware-support", "multimedia"]

[[bin]]
name = "autorip"
path = "src/main.rs"

[dependencies]
libfreemkv = "1.0.0-rc.4.1"
freemkv-keysources = "1.0.0-rc.4.1"
freemkv-unlock-ld = { git = "https://github.com/freemkv/freemkv-unlock", tag = "v1.0.0-rc.3" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22"
ureq = { version = "2", features = ["json"] }
tiny_http = "0.12"
once_cell = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-appender = "0.2"
# Same kernel-wakeup channel primitive libfreemkv uses for Pipeline.
# Replaces the producer's `std::sync::mpsc::sync_channel` + 50 ms
# poll-loop in `ripper/mux.rs` so the producer thread blocks on
# consumer drain instead of pacing at 20 frames/sec.
crossbeam-channel = "0.5"
# Global allocator. mimalloc cuts the ~22% kernel allocator complex
# (clear_page, mmap/munmap, mm_fault, memcg) that glibc's
# mmap-on-large-alloc path generates from per-frame PesFrame
# allocations during mux. `secure` enables guard pages + canaries —
# we run privileged (per autorip's docker compose) and parse
# untrusted disc payloads, so the few-percent allocator cost is worth
# the hardening.
mimalloc = { version = "0.1", features = ["secure"] }

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[dev-dependencies]
tempfile = "3"

[profile.release]
lto = "thin"
codegen-units = 1

# Resolve libfreemkv + freemkv-keysources from their GIT TAGS instead of
# crates.io, so the GHCR image build starts the instant those tags exist — it
# no longer waits on the crates.io publish + index propagation (the old serial
# chain). crates.io publish still happens (for external consumers) but as an
# independent parallel job; autorip no longer depends on it.
#
# This [patch.crates-io] is committed (CI-visible) and applies to BOTH the
# direct deps above AND the transitive references that freemkv-unlock-ld and
# freemkv-keysources make to libfreemkv via crates.io — unifying every
# libfreemkv ref to the single git-tag source (no duplicate crate, no
# trait-identity mismatch).
#
# The release script rewrites these tags
# to the new version before regenerating Cargo.lock. Local dev overrides this
# patch with a path patch via the gitignored .cargo/config.toml.
[patch.crates-io]
libfreemkv = { git = "https://github.com/freemkv/libfreemkv", tag = "v1.0.0-rc.4.1" }
freemkv-keysources = { git = "https://github.com/freemkv/freemkv-keysources", tag = "v1.0.0-rc.4.1" }